# Th10Ai

./: .editorconfig  .gitignore  CMakeLists.txt  Loader.conf  README.md  TH10AI.sln  TH10Bot.sln  Th10Ai.conf  Th10Ai.sln  dump_start.bat  dump_stop.bat  procdump_install.bat  procdump_uninstall.bat  vs_backup.bat  vs_restore.bat
Base/: Base.vcxproj  Base.vcxproj.filters  CMakeLists.txt
Base/include/Base/: Catcher.h  Class.h  Clock.h  Common.h  Enum.h  Error.h  ErrorCode.h  Exception.h  FuncTraits.h  Log.h  Logger.h  Object.h  Point.h  Process.h  Rect.h  RefCounted.h  ScopeGuard.h  Singleton.h  Size.h  SourceLocation.h  StackTrace.h  Streamable.h  String.h  StrongPtr.h  Throw.h  Throwable.h  Time.h  Traits.h  Type.h  TypeTraits.h  Types.h  Utils.h  WeakPtr.h  Window.h
Base/include/Base/Exception/: Catcher.h  Exception.h  StackTrace.h  SystemError.h  Throw.h
Base/include/Base/RefCounted/: RefCounted.h  RefCountedObject.h  sp.h  wp.h
Base/include/Base/Windows/: Apis.h  Common.h  CrashHandler.h  DxResult.h  ExceptFilter.h  ExceptTrace.h  Handle.h  Module.h  Process.h  StackTrace.h  StackTraceImpl.h  SystemError.h  Thread.h  Types.h  WindowsError.h
Base/include/BaseDll/: Common.h  Logger.h
Base/include/BaseDll/Windows/: Common.h
Base/include/Windows/: Apis.h  Common.h  DirectXResult.h  DxResult.h  Point.h  Process.h  Rect.h  Size.h  Thread.h  Types.h  Util.h  Utils.h  Window.h  WindowsError.h
Base/src/Base/: Catcher.cpp  Clock.cpp  Error.cpp  ErrorCode.cpp  Exception.cpp  Log.cpp  Logger.cpp  Object.cpp  Process.cpp  RefCounted.cpp  RefCountedObject.cpp  SourceLocation.cpp  StackTrace.cpp  Streamable.cpp  String.cpp  Throw.cpp  Throwable.cpp  Time.cpp  Utils.cpp  Window.cpp
Base/src/Base/Exception/: Catcher.cpp  Exception.cpp  StackTrace.cpp  SystemError.cpp  Throw.cpp
Base/src/Base/Windows/: Apis.cpp  DxResult.cpp  ExceptFilter.cpp  ExceptTrace.cpp  Handle.cpp  MiniDump.cpp  Module.cpp  Process.cpp  StackTrace.cpp  StackTraceImpl.cpp  SystemError.cpp  Thread.cpp  WindowsError.cpp
Base/src/BaseDll/: Logger.cpp
Base/src/Windows/: Apis.cpp  DirectXResult.cpp  DxResult.cpp  Process.cpp  Thread.cpp  Util.cpp  Utils.cpp  Window.cpp  WindowsError.cpp  dxerr.cpp
Th10Ai/: CMakeLists.txt  Th10Ai.vcxproj  Th10Ai.vcxproj.filters
Th10Ai/include/Th10Ai/: Action.h  Bullet.h  Cell.h  Common.h  Config.h  Console.h  Data.h  Direction.h  DllInject.h  DllMain.h  Enemy.h  Entity.h  Input.h  Item.h  Laser.h  Listener.h  MainWindow.h  MyApp.h  MyDetours.h  MyFrame.h  MyWindow.h  Node.h  Path.h  Player.h  Point.h  RawStatus.h  Rect.h  Region.h  Scene.h  SharedData.h  SharedMemory.h  Size.h  Status.h  Th10Ai.h  Th10AiListener.h  Th10Apis.h  Th10Context.h  Th10Data.h  Th10Hook.h  Th10Raw.h  (+3 more)
Th10Ai/include/Th10Ai/DirectX/: D3D9Hook.h  DI8Hook.h  MyDirect3D9.h  MyDirect3DDevice9.h  MyDirectInput8A.h  MyDirectInputDevice8A.h
Th10Ai/include/Th10Ai/Entity/: AABB.h  BB.h  Bullet.h  Enemy.h  Entity.h  Item.h  Laser.h  OBB.h  Player.h  Projection.h  Vector2.h
Th10Ai/include/Th10Ai/Math/: BB.h  (+4 more)
Th10Ai/src/Th10Ai/: Bullet.cpp  Cell.cpp  Config.cpp  Console.cpp  Data.cpp  DllInject.cpp  DllMain.cpp  Enemy.cpp  Entity.cpp  Input.cpp  Item.cpp  Laser.cpp  Main.cpp  MainWindow.cpp  MyApp.cpp  MyDetours.cpp  MyFrame.cpp  MyWindow.cpp  Node.cpp  Path.cpp  Player.cpp  Region.cpp  Scene.cpp  SharedData.cpp  SharedMemory.cpp  Status.cpp  Th10Ai.cpp  Th10Apis.cpp  Th10Context.cpp  Th10Hook.cpp  Tree.cpp  Utils.cpp  WinMain.cpp  main.cpp
Th10Base/: CMakeLists.txt  Th10Base.vcxproj  Th10Base.vcxproj.filters
Th10Base/include/Th10Base/: AABB.h  BB.h  Bullet.h  Common.h  Direction.h  Enemy.h  Entity.h  Input.h  Item.h  Laser.h  OBB.h  Player.h  Projection.h  SharedData.h  SharedInput.h  SharedMemory.h  SharedStatus.h  Th10Raws.h  Vector2.h
Th10Base/src/Th10Base/: AABB.cpp  BB.cpp  Bullet.cpp  Enemy.cpp  Entity.cpp  Input.cpp  Item.cpp  Laser.cpp  OBB.cpp  Player.cpp  Projection.cpp  SharedData.cpp  SharedInput.cpp  SharedStatus.cpp  Vector2.cpp
Th10Hook/: CMakeLists.txt  Th10Hook.vcxproj  Th10Hook.vcxproj.filters
Th10Hook/include/Th10Hook/: Action.h  Bullet.h  Cell.h  Common.h  Console.h  D3D9Hook.h  D3d9Hook.h  DI8Hook.h  Data.h  Di8Hook.h  Direction.h  DllApp.h  DllFree.h  DllLoader.h  DllMain.h  Enemy.h  Entity.h  HookApp.h  HookDll.h  HookLoader.h  HookMain.h  InlineHook32.h  Input.h  Item.h  Laser.h  MyDetours.h  MyDirect3D9.h  MyDirect3DDevice9.h  MyDirectInput8A.h  Node.h  OldDxResult.h  Path.h  Player.h  Point.h  RawStatus.h  Reader.h  Reader2.h  Rect.h  Region.h  Scene.h  (+15 more)
Th10Hook/src/Th10Hook/: Bullet.cpp  Cell.cpp  Console.cpp  D3D9Hook.cpp  D3d9Hook.cpp  DI8Hook.cpp  Data.cpp  Di8Hook.cpp  DllApp.cpp  DllFree.cpp  DllLoader.cpp  DllMain.cpp  Enemy.cpp  Entity.cpp  HookApp.cpp  HookDll.cpp  HookLoader.cpp  HookMain.cpp  InlineHook32.cpp  Input.cpp  Item.cpp  Laser.cpp  MyDetours.cpp  MyDirect3D9.cpp  MyDirect3DDevice9.cpp  MyDirectInput8A.cpp  MyDirectInputDevice8A.cpp  Node.cpp  OldDxResult.cpp  Path.cpp  Player.cpp  Reader.cpp  Reader2.cpp  Region.cpp  Scene.cpp  SelfFree.cpp  SharedData.cpp  SharedMemory.cpp  Status.cpp  Th10Ai.cpp  (+8 more)
(+395 files in other folders)
